--- a/vars/Debian.yml
+++ b/vars/Debian.yml
@@ -1,5 +1,6 @@
 ---
 
+httpd_conf_directory: /etc/apache2
 httpd_conf_directory_enabled: "{{httpd_conf_directory}}/conf-enabled"
 apache_service: apache2
   apache_restart_state
