--- a/tasks/build-fits-site.yml
+++ b/tasks/build-fits-site.yml
@@ -1,3 +1,8 @@
+---
+
+- name: Include OS-specific variables
+  include_vars: "{{ ansible_os_family}}.yml"
+
 - name: Build site for FITS microservice
   blockinfile:
     path: "{{ httpd_conf_directory }}/conf-available/CrayFits.conf"
