--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -4,8 +4,8 @@
   file:
     path: "{{ fits_install_root }}/fits-{{ fits_version }}"
     state: directory
-    owner: tomcat8
-    group: tomcat8
+    owner: "{{ fits_user }}"
+    group: "{{ fits_group }}"
     mode: 0700
 
 - name: Downloading FITS executables
@@ -23,6 +23,11 @@
     src: "{{ fits_install_root }}/fits-{{ fits_version }}/fits-{{ fits_version }}.zip"
     dest: "{{ fits_install_root }}/fits-{{ fits_version }}"
     remote_src: True
+
+- name: Remove temporary FITS directory
+  file:
+    path: /opt/fits
+    state: absent
 
 - name: Move FITS into place
   file:
